--- a/ms-catalogo/pom.xml
+++ b/ms-catalogo/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>ms-catalogo</artifactId>
+    <artifactId>ms_catalogo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ms-catalogo</name>
     <description>ms-catalogo</description>
