--- a/config-data/ms_cliente.yml
+++ b/config-data/ms_cliente.yml
@@ -19,3 +19,10 @@ springdoc:
   swagger-ui:
     enabled: true
     path: /doc/swagger-ui.html
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8090/eureka
+  instance:
+    hostname: localhost
