--- a/config-data/ms-cliente.yml
+++ b/config-data/ms-cliente.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: ms_cliente
+    name: ms-cliente
 
   datasource:
-    url: jdbc:mysql://localhost:3306/ms_cliente
+    url: jdbc:mysql://localhost:3306/ms-cliente
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
