--- a/config-data/ms-gateway-server.yml
+++ b/config-data/ms-gateway-server.yml
@@ -32,3 +32,7 @@ spring:
               uri: lb://ms-cliente
               predicates:
                 - Path=/cliente/**
+            - id: ms-compras
+              uri: lb://ms-compras
+              predicates:
+                - Path=/compras/**
