--- a/ms-cliente/pom.xml
+++ b/ms-cliente/pom.xml
@@ -43,6 +43,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+
+
+
 
 
 
