--- a/config-data/ms-gateway-server.yml
+++ b/config-data/ms-gateway-server.yml
@@ -30,6 +30,8 @@ spring:
               uri: lb://ms-catalogo
               predicates:
                 - Path=/categoria/**
+              filters:
+                - AuthFilter
             - id: ms-cliente
               uri: lb://ms-cliente
               predicates:
