--- a/config-data/ms-gateway-server.yml
+++ b/config-data/ms-gateway-server.yml
@@ -31,7 +31,7 @@ spring:
               predicates:
                 - Path=/categoria/**
               filters:
-                - AuthFilter
+                - name : AuthFilter
             - id: ms-cliente
               uri: lb://ms-cliente
               predicates:
