--- a/config-data/ms-gateway-server.yml
+++ b/config-data/ms-gateway-server.yml
@@ -19,6 +19,16 @@ spring:
 
   cloud:
     gateway:
+      globals:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:4200"
+            allowedHeaders: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
       server:
         webflux:
           discovery:
